lander.lessons.lander.lvl2_locate_landing_zone.LocateLandingZone.scala.error
Lander:24: error: value debut is not a member of lessons.lander.universe.Segment
	fina.debut = point1
             ^Lander:25: error: value fin is not a member of lessons.lander.universe.Segment
	fina.fin = point2
             ^